--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@react-spring/web": "^9.7.2",
+    "@smastrom/react-rating": "^1.3.2",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.54.0",
     "@tanstack/react-query": "^4.29.12",
@@ -27,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.12.0",
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.1",
@@ -36,7 +38,7 @@
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.11",
-    "swiper": "^9.3.2"
+    "swiper": "^9.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
