--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.2",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-rating": "^2.0.5",
