--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-fast-marquee": "^1.6.2",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-player": "^2.13.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.12.0",
     "react-slick": "^0.29.0",
